<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFileExplorer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:text="@string/load_file"
            android:textSize="@dimen/txt_size_14" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chart_info"
            android:layout_below="@id/buttonFileExplorer"
            android:textColor="@color/colorBlack"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_14" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layoutDirection="rtl"
                android:text="@string/time"
                android:textAlignment="textStart"
                tools:ignore="RtlHardcoded" />

            <RadioButton
                android:id="@+id/radioDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layoutDirection="rtl"
                android:text="@string/distance"
                android:textAlignment="textStart"
                tools:ignore="RtlHardcoded" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonShowChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:background="@android:drawable/btn_default"
            android:text="@string/build_chart"
            android:textSize="@dimen/txt_size_14"
            tools:ignore="ButtonStyle" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp">

    </View>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>